compiler/kernc_cli/tests/soundness/run-pass/coherence/more_specific_impl_selected_at_dispatch.kn
// class: specialization-dispatch
// exit: 0

trait Score {
    fn value() i32;
};

impl[T] &[T] : Score {
    fn value() i32 {
        return 1;
    }
}

impl &[u8] : Score {
    fn value() i32 {
        return 2;
    }
}

fn main() i32 {
    let score = "ok".value();
    return if score == 2 { 0 } else { 1 };
}
