compiler/kernc_cli/tests/soundness/reject/mutability/mut_slice_cannot_call_shared_slice_method.kn
// source: mutable slices do not inherit shared slice method sets
// stderr: no field or method named `is_empty` found on type `&mut [i32]`

fn main() i32 {
    let mut values = [2]i32.{ 1, 2 };
    let view = values..&[0...2];
    if view.is_empty() {
        return 1;
    }
    return 0;
}
